# pegboard

./: README.md  pyproject.toml
runs/: partition_graph_02.sh  settings.txt  write_settings.py
runs/analysis/: analyze_gate_assignment.py
runs/graph/: DAG20.102.edgelist  DAG20.105.edgelist  DAG20.107.edgelist  DAG20.11.edgelist  DAG20.111.edgelist  DAG20.113.edgelist  DAG20.114.edgelist  DAG20.117.edgelist  DAG20.118.edgelist  DAG20.119.edgelist  DAG20.120.edgelist  DAG20.121.edgelist  DAG20.125.edgelist  DAG20.129.edgelist  DAG20.13.edgelist  DAG20.130.edgelist  DAG20.14.edgelist  DAG20.15.edgelist  DAG20.18.edgelist  DAG20.19.edgelist  DAG20.22.edgelist  DAG20.23.edgelist  DAG20.24.edgelist  DAG20.25.edgelist  DAG20.26.edgelist  DAG20.30.edgelist  DAG20.31.edgelist  DAG20.32.edgelist  DAG20.33.edgelist  DAG20.34.edgelist  DAG20.35.edgelist  DAG20.36.edgelist  DAG20.37.edgelist  DAG20.38.edgelist  DAG20.39.edgelist  DAG20.40.edgelist  DAG20.41.edgelist  DAG20.43.edgelist  DAG20.44.edgelist  DAG20.45.edgelist  (+174 more)
runs/results/DAG30.3/: part_solutions.txt
